--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,4 +6,5 @@ galaxy_info:
   license: license (GPLv2, CC-BY, etc)
   min_ansible_version: 2.0
 
-dependencies: []
+dependencies:
+- geerlingguy.homebrew
